# ai_doctor_with_vision_voice

./: README.md  gradio_app.py  main.py  pyproject.toml
src/: brain_for_doctor.py  voice_of_doctor.py  voice_of_user.py
