[project]
name = "ai-doctor-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.45.0",
    "groq>=1.2.0",
    "gtts>=2.5.4",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "speechrecognition>=3.16.1",
]
